@@ -21,7 +21,8 @@ The TOC is only included if the `toc` attribute is set on the document.
 The value assigned to `toc` determines the placement of the TOC.
 If a value isn't specified, like in the above example, the placement defaults to `auto`, which is directly after the document title.
 For documents that have the `book` doctype, the TOC is inserted using discrete pages between the title page and the first page of content.
-For all other doctypes, unless the `title-page` attribute is set, the TOC is inserted in the flow of text.
+This same behavior is used for all other doctypes if the `title-page` attribute is set and the value of the `toc-break-after` theme key is not `auto`.
+Except for the aforementioned cases, the TOC is inserted in the flow of text.
 If a placement is not specified, that location is between the document title and the first block of content.
 
 While the table of contents isn't generated by default, the PDF outline is always generated.
